@@ -20,6 +20,7 @@
 
 package cascading.scheme;
 
+import cascading.tap.Tap;
 import cascading.tuple.TupleEntry;
 
 /**
@@ -73,4 +74,11 @@ public interface SourceCall<Context, Input>
    * @return the platform dependent input handler
    */
   Input getInput();
+
+  /**
+   * Method getTap returns the parent {@link Tap} instance that encapsulates the current {@link Scheme} instance.
+   *
+   * @return the parent Tap
+   */
+  Tap getTap();
   }
