@@ -47,7 +47,7 @@ public class StdInTap extends SourceTap<Properties, InputStream>
   @Override
   public TupleEntryIterator openForRead( FlowProcess<? extends Properties> flowProcess, InputStream inputStream ) throws IOException
     {
-    return new TupleEntrySchemeIterator<Properties, InputStream>( flowProcess, getScheme(), System.in );
+    return new TupleEntrySchemeIterator<Properties, InputStream>( flowProcess, this, getScheme(), System.in );
     }
 
   @Override
